Working config, working commands -mostly, currently gotta do /nerffarms reload twice